<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <!-- Botão Distância -->

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/choose_conversion"
        android:textColor="#222222"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Botão Peso -->

    <Button
        android:id="@+id/btnWeight"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="364dp"
        android:layout_height="60dp"
        android:backgroundTint="#2196F3"
        android:text="@string/weight_conversion"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnDistance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Botão Tempo -->

    <Button
        android:id="@+id/btnDistance"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="364dp"
        android:layout_height="60dp"
        android:backgroundTint="#2196F3"
        android:text="@string/distance_conversion"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnWeight" />

    <Button
        android:id="@+id/btnTime"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="364dp"
        android:layout_height="60dp"
        android:backgroundTint="#2196F3"
        android:text="@string/time_conversion"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDistance" />

</androidx.constraintlayout.widget.ConstraintLayout>
