<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F7FA"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvTitleTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Time_conversion_TIMECONVERSION"
        android:textColor="#222222"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Entrada de valor -->

    <EditText
        android:id="@+id/etTimeValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#AAAAAA"
        android:hint="@string/enter_value"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#888888"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleTime" />

    <!-- Spinner do primeiro -->

    <Spinner
        android:id="@+id/spinnerFrom"
        android:layout_width="365dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTimeValue" />

    <!-- Spinner de destino -->

    <Spinner
        android:id="@+id/spinnerTo"
        android:layout_width="364dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerFrom" />

    <!-- Botão converter -->

    <Button
        android:id="@+id/btnConvertTime"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#FF0000"
        android:text="@string/convert"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerTo" />

    <!-- Botão Voltar -->

    <Button
        android:id="@+id/btnBack"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="410dp"
        android:layout_height="57dp"
        android:layout_marginTop="364dp"
        android:backgroundTint="#FF0000"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerTo" />

    <!-- Resultado -->

    <TextView
        android:id="@+id/tvResultTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/result"
        android:textColor="#333333"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnConvertTime" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="304dp"
        android:layout_height="220dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.688"
        app:srcCompat="@drawable/time" />

</androidx.constraintlayout.widget.ConstraintLayout>
